# Utility-billing-system

./: Cargo.toml  README.md
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20251021_043820_create_tables.rs  m20251023_160743_make_meter_customerId_nullable.rs
src/: main.rs
src/entities/: customers.rs  invoices.rs  meters.rs  mod.rs  payments.rs  prelude.rs  readings.rs
src/static/css/: styles.css
src/static/js/: company-portal.js  customer-portal.js
src/templates/: company_portal.html  customer-portal.html
src/utils/: helper_functions.rs  mod.rs  view_handlers.rs
