[package]
name = "utility_billing_system"
version = "0.1.0"
edition = "2024"

[dependencies]
# orm
sea-orm = { version = "2.0.0-rc", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
# async operations
tokio = { version = "1.48.0", features = ["full"] }
# env variables
dotenvy = "0.15"
# web framework
axum = {version = "0.8.6",features = ["macros","json"]}
# json handling
serde ={ version = "1.0.228",features = ["derive"]}
serde_json = "1.0.145"
# logging
tracing-subscriber = {version = "0.3.20",features = ["fmt","env-filter"]}
tracing = "0.1.41"
# middleware
tower = { version = "0.5.1", features = ["full"] }
tower-http = {version = "0.6.6",features = ["cors","trace","compression-full","auth","fs"]}
# template handling with tera
tera = "1.20.0"
once_cell = "1.21.3" # make tera global
# chrono for time
chrono = { version = "0.4.42", features = ["serde"] }
